--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/vanilla-app-template/",
+    "build": "vite build --base=/js-goit-hw-9/",
     "preview": "vite preview"
-  },
+  }, 
   "devDependencies": {
     "glob": "^8.1.0",
     "vite": "^4.5.2"
